2007-07-30 [paul]	2.10.0cvs79

	* src/main.c
		Fix IMAP timeout setting

2007-07-30 [colin]	2.10.0cvs78

	* src/prefs_account.c
		Fix a deprecated widget. Patch by
		Andrej

2007-07-27 [paul]	2.10.0cvs77

	* src/matcher_parser_parse.y
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
		these changes forgotten in cvs74's
		'watch thread' feature

2007-07-27 [paul]	2.10.0cvs76

	* src/compose.c
		fix potential crasher
		thanks to Colin

2007-07-27 [paul]	2.10.0cvs75

	* src/mainwindow.c
	* src/manual.c
	* src/manual.h
	* src/gtk/gtkutils.c
		make mainwindow's /Help/Manual point to the
		remote copy if the local copy doesn't exist

2007-07-27 [paul]	2.10.0cvs74

	* src/Makefile.am
	* src/filtering.c
	* src/folder.c
	* src/mainwindow.c
	* src/matcher.c
	* src/matcher.h
	* src/matcher_parser_parse.y
	* src/procmsg.c
	* src/procmsg.h
	* src/stock_pixmap.c
	* src/stock_pixmap.h
	* src/summaryview.c
	* src/summaryview.h
	* src/toolbar.c
	* src/toolbar.h
	* src/pixmaps/watchthread.xpm
		add 'watch thread' feature

2007-07-27 [paul]	2.10.0cvs73

	* src/prefs_folder_item.c
		adjust labels, add tooltips

2007-07-27 [colin]	2.10.0cvs72

	* src/summaryview.c
		Maemo: Remove less used menu items

2007-07-26 [colin]	2.10.0cvs71

	* src/messageview.c
		Maemo: destroy messageview after trashing mail.
		Maybe should be done on X11 too

2007-07-26 [colin]	2.10.0cvs70

	* src/folderview.c
	* src/mainwindow.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/summaryview.c
		Add View/Show or Hide/Column headers

2007-07-26 [colin]	2.10.0cvs69

	* src/procmime.c
		Fix unwanted output

2007-07-26 [colin]	2.10.0cvs68

	* src/ldapserver.c
		Fix possible crash on cache invalidation
	* src/compose.c
	* src/procmime.c
	* src/procmime.h
	* src/quote_fmt_parse.y
		Make replying to mails with big attachments
		much faster. Fixes bug 1224, 'The process of 
		Replying to emails with large attachments 
		seems unreasonably long...'

2007-07-26 [colin]	2.10.0cvs67

	* src/mimeview.c