@@ -2733,3 +2733,4 @@
 ( cvs diff -u -r 1.25.2.31 -r 1.25.2.32 src/matcher_parser_parse.y;  cvs diff -u -r 1.1.4.38 -r 1.1.4.39 src/prefs_filtering_action.c;  cvs diff -u -r 1.43.2.59 -r 1.43.2.60 src/prefs_matcher.c;  ) > 2.10.0cvs77.patchset
 ( cvs diff -u -r 1.105.2.103 -r 1.105.2.104 src/prefs_account.c;  ) > 2.10.0cvs78.patchset
 ( cvs diff -u -r 1.115.2.161 -r 1.115.2.162 src/main.c;  ) > 2.10.0cvs79.patchset
+( cvs diff -u -r 1.43.2.60 -r 1.43.2.61 src/prefs_matcher.c;  ) > 2.10.0cvs80.patchset
